--- a/index/style/index.css
+++ b/index/style/index.css
@@ -31,6 +31,9 @@
     overflow: hidden;
     box-shadow: 0px 10px 11px 5px rgba(0, 0, 0, 0.25);
 }
+#burger-menu{
+    display: none;
+}
 
 #home header{
     display: flex;
@@ -163,7 +166,7 @@
 #home-right img{
     position: relative;
 
-    z-index: 100;
+    z-index: 1;
 }
 .white-home{
     position: absolute;
